--- a/notetoself/package.json
+++ b/notetoself/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "enzyme": "^2.9.1",
     "enzyme-adapter-react-16": "^1.1.1",
+    "prettier": "1.12.1",
     "react-scripts": "1.0.10",
     "react-test-renderer": "^15.6.1"
   },
